hard-gists/25d98841e6a82f30ae5cac24e9039856/run.log
=== Docker Run Log for 25d98841e6a82f30ae5cac24e9039856 ===
Started at: Mi 29. Okt 13:09:24 CET 2025

[2025-10-29 13:09:24] START: Running container for 25d98841e6a82f30ae5cac24e9039856
[2025-10-29 13:09:24] SUCCESS: Container 247dfa4ce3acf1d4d0d8a6fe1cd8e3958c7d0a1c541962af3c4770064c07b27b started for 25d98841e6a82f30ae5cac24e9039856
=== Container logs for 25d98841e6a82f30ae5cac24e9039856 ===
  File "/snippet.py", line 101
    print '[+] Kill-Switch/Sandbox check url',url
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 25d98841e6a82f30ae5cac24e9039856 ===
[2025-10-29 13:09:26] INFO: Container 247dfa4ce3acf1d4d0d8a6fe1cd8e3958c7d0a1c541962af3c4770064c07b27b has stopped
